
Thu Aug 3 11:36:15 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kerberos.c - Give the compiler something to compile when K4 disabled.


Tue Jun 27 16:16:18 EDT 1995	Paul Park	(pjpark@mit.edu)
	* enc_des.c, encrypt.c, krb4encpwd.c, read_password.c, rsaencpwd.c,
		spx.c - Give the compiler something to compile when these
		modules are essentially disabled.  Some compilers choke when
		there's nothing to compile.
	* setenv.c - Change prototype for __findenv to be static since it's
		really static.

Tue Jun 20 13:59:43 1995  Tom Yu  (tlyu@dragons-lair)

	* configure.in: fix typo

	* strrchr.c: NO_STRING_H -> HAVE_STRING_H

	* strftime.c: NO_STRING_H -> HAVE_STRING_H

	* strerror.c: NO_STRING_H -> HAVE_STRING_H

	* strdup.c: NO_STRING_H -> HAVE_STRING_H

	* strchr.c: NO_STRING_H -> HAVE_STRING_H

	* strcasecmp.c: NO_STRING_H -> HAVE_STRING_H

	* spx.c: NO_STRING_H -> HAVE_STRING_H

	* rsaencpwd: NO_STRING_H -> HAVE_STRING_H

	* read_password.c: NO_STRING_H -> HAVE_STRING_H

	* mem.c: NO_STRING_H -> HAVE_STRING_H

	* krb4encpwd.c: NO_STRING_H -> HAVE_STRING_H

	* kerberos5.c: NO_STRING_H -> HAVE_STRING_H

	* kerberos.c: NO_STRING_H -> HAVE_STRING_H

	* encrypt.c: NO_STRING_H -> HAVE_STRING_H

	* auth.c: NO_STRING_H -> HAVE_STRING_H for consistency

	* configure.in: added missing tests for string.h, stdlib.h

Sat Jun 10 22:59:42 1995  Tom Yu  (tlyu@dragons-lair)

	* forward.c, kerberos5.c: krb5_auth_context redefinitions

Fri Jun  9 18:30:02 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Wed May 24 10:29:54 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kerberos5.c: Include string.h/strings.h. Include stdlib.h or
		declare malloc. 

Sun May  7 18:45:09 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kerberos5.c (kerberos5_send): Fix improperly closed comment
			krb5_get_credentials second argument is not 
				kdc_options....

	* configure.in (LIBOBJS): Removed duplicate WITH_KRB4
